tests/negative/resource_create_non_place.ora
resource TokenUnit = u256;

contract ResourceCreateNonPlace {
    pub fn bad(amount: TokenUnit) {
        @create(amount, amount);
    }
}
